--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dynamic Canvas Resizing</title>
+    <title>Demo: Pokemon</title>
     <style>
         body {
             background-color: black;
@@ -30,6 +30,7 @@
     <div id="canvas-container">
         <canvas id="myCanvas"></canvas>
     </div>
+    <script src="json/collisions.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
