--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <canvas id="myCanvas"></canvas>
     </div>
     <script src="json/collisions.js"></script>
+    <script src="js/classes.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
