--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
         canvas {
             display: block; /* Ensure canvas takes full width of its container */
             width: 100%; /* Make the canvas width fill its container */
-            height: auto; /* Maintain the canvas's aspect ratio */
+            height: auto; /* Maintain the canvas's aspect ratio */ 
         }
     </style>
 </head>
 <body>
-    <div id="canvas-container">
+    <div id="canvasContainer" style="display:inline-block; position: relative">
+        <div id="overlappingDiv" \
+        style="background-color: black; position: absolute; top: 0; right: 0; bottom: 0; left: 0; opacity: 0; pointer-events: none;"> 
+        </div>  <!-- Black block for transition to battle -->
         <canvas id="myCanvas"></canvas>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="json/collisions.js"></script>
     <script src="json/battleZones.js"></script>
     <script src="js/classes.js"></script>
