--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link
+      rel="icon"
+      href="./assets/favicon/favicon.ico"
+      type="image/png/x-icon"
+    />
     <title>Demo: Pokemon</title>
     <style>
+      @font-face {
+        font-family: "power clear";
+        src: url("./assets/fonts/power\ clear.woff2") format("woff2");
+      }
+
       body {
         background-color: black;
         margin: 0;
@@ -11,11 +21,16 @@
         align-items: center;
         height: 100vh;
         overflow: hidden;
+        /* Disable Text Highlighting */
+        user-select: none;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
       }
 
       #canvas-container {
-        position: relative; /* Positioning context for canvas */
-        width: 80%; /* Adjust the desired width */
+        position: relative;
+        width: 100%;
         max-width: 100%; /* Ensure it doesn't exceed the viewport width */
       }
 
@@ -23,6 +38,175 @@
         display: block; /* Ensure canvas takes full width of its container */
         width: 100%; /* Make the canvas width fill its container */
         height: auto; /* Maintain the canvas's aspect ratio */
+      }
+
+      #databoxFoe img {
+        position: absolute;
+        width: 65vw;
+        max-width: 65%;
+        top: 10%;
+        left: 0px;
+        opacity: 0.9;
+      }
+
+      #databoxPlayer img {
+        position: absolute;
+        width: 65vw;
+        max-width: 65%;
+        top: 52.5%;
+        right: 0px;
+        opacity: 0.9;
+      }
+
+      #healthbarFoe {
+        position: absolute;
+        height: 2.5%;
+        width: 24.4%;
+        max-width: 307px;
+        background-color: rgb(111, 247, 167);
+        background-image: linear-gradient(
+          to bottom,
+          rgba(128, 128, 128, 0.15) 30%,
+          rgba(192, 192, 192, 0) 30%
+        ); /* Gray vertical gradient with opacity */
+        top: 25%;
+        left: 29.45%;
+        border-radius: 2px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); /* subtle shadow */
+      }
+
+      #healthbarPlayer {
+        position: absolute;
+        height: 2.5%;
+        width: 24.4%;
+        max-width: 307px;
+        background-color: rgb(111, 247, 167);
+        background-image: linear-gradient(
+          to bottom,
+          rgba(128, 128, 128, 0.15) 30%,
+          rgba(192, 192, 192, 0.1) 30%
+        );
+        top: 67.5%;
+        left: 69%;
+        border-radius: 2px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+      }
+
+      #battleDiv {
+        position: absolute;
+        bottom: 0;
+        width: 100%; /* Set the width as a percentage of the canvas width */
+        padding-top: 15.45%;
+        background-color: rgba(
+          255,
+          255,
+          255,
+          0.3 /* translucent battleDiv */
+        ); /* translucent white background */
+        border-top: 3px solid rgba(0, 0, 0, 0.8);
+        border-radius: 10px;
+      }
+
+      #combatTextDiv {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+      }
+
+      #attackSelectionDiv {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        text-align: right;
+        padding-right: 0px;
+      }
+
+      .databox-text-foe {
+        position: absolute;
+        margin-top: 20px;
+        top: 10%; 
+        left: 2.5%; 
+        color: #434334; 
+        font-family: "power clear", sans-serif;
+        font-size: 4.5vw;
+        text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); 
+        padding: 1px;
+      }
+
+      .databox-text-player {
+        position: absolute;
+        margin-top: 20px;
+        top: 52%; 
+        left: 45%; 
+        color: #434334; 
+        font-family: "power clear", sans-serif;
+        font-size: 4.5vw;
+        text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); 
+        padding: 1px;
+      }
+
+      .attack-button {
+        position: absolute;
+        width: 33.33%;
+        height: 41.6%;
+        top: 8%;
+        left: 32.1%;
+        right: 15%;
+        bottom: 50px;
+        font-family: "power clear", sans-serif;
+        font-size: 3.3vw;
+        background-color: transparent;
+        border: none;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+        cursor: pointer;
+      }
+
+      .attack-button:hover {
+        background-color: #d3d3d3; /* Change the background color to grey when the button is hover */
+      }
+
+      .attack-button:active {
+        background-color: #888; /* Change the background color to grey when the button is active (clicked) */
+      }
+
+      #attack2 {
+        left: 65.38%;
+      }
+
+      #attack3 {
+        top: 50%;
+        height: 40.5%;
+      }
+
+      #attack4 {
+        top: 50%;
+        left: 65.38%;
+        height: 40.5%;
+      }
+
+      #attackSelectionDiv img {
+        max-height: 100%;
+        max-width: 100%;
+      }
+
+      #attackSelectionDiv img {
+        max-height: 100%; /* Ensure the image doesn't exceed the div's height */
+        max-width: 100%; /* Ensure the image doesn't exceed the div's width */
+      }
+
+      #sideTextDiv {
+        position: absolute;
+        top: 16%;
+        left: 11.5%;
+        bottom: 50px;
+        font-family: "power clear", sans-serif;
+        font-size: 3.2vw;
+        padding: 2px;
       }
 
       #arrow-buttons {
@@ -39,12 +223,7 @@
         justify-content: center; /* Horizontally center content */
         width: 50px;
         height: 50px;
-        background-color: rgba(
-          73,
-          71,
-          134,
-          0.3
-        ); /* 50% translucent background */
+        background-color: rgba(73, 71, 134, 0.3); /* translucent background */
         color: white;
         font-size: 24px;
         margin: 5px;
@@ -61,8 +240,14 @@
         left: 20px;
       }
     </style>
+    <!-- Add the viewport meta tag to disable media zoom -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
   </head>
-  <body>
+  <body oncontextmenu="return false;">
+    <!-- Disable Context Menu -->
     <div id="canvasContainer" style="display: inline-block; position: relative">
       <div
         id="overlappingDiv"
@@ -79,7 +264,36 @@
         "
       ></div>
       <!-- Black block for transition to battle -->
+      <div id="databoxFoe">
+        <img src="./assets/databoxfoe.png" draggable="false" />
+      </div>
+      <div id="healthbarFoe"></div>
+      <h1 class="databox-text-foe">SQUIRTLE</h1>
+
+      <div id="databoxPlayer">
+        <img src="./assets/databox.png" draggable="false" />
+      </div>
+      <div id="healthbarPlayer"></div>
+      <h1 class="databox-text-player">CHARMANDER</h1>
+
       <canvas id="myCanvas"></canvas>
+
+      <div id="battleDiv">
+        <div id="combatTextDiv">
+          <div id="sideTextDiv">
+            What will <br />
+            you do?
+          </div>
+          <div id="attackSelectionDiv">
+            <img src="./assets/choice.png" draggable="false" />
+            <button id="attack1" class="attack-button">Attack1</button>
+            <button id="attack2" class="attack-button">Attack2</button>
+            <br />
+            <button id="attack3" class="attack-button">Attack3</button>
+            <button id="attack4" class="attack-button">Attack4</button>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="arrow-buttons">
       <button class="arrow-button" id="up-button">↑</button><br />
