--- a/index.html
+++ b/index.html
@@ -58,6 +58,30 @@
         opacity: 0.9;
       }
 
+      #lvFoe {
+        position: absolute;
+        margin-top: 20px;
+        top: 10%; 
+        left: 48%; 
+        color: #434334; 
+        font-family: "power clear", sans-serif;
+        font-size: 4.5vw;
+        text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); 
+        padding: 1px;
+      }
+
+      #lvPlayer {
+        position: absolute;
+        margin-top: 20px;
+        top: 52%; 
+        left: 88%; 
+        color: #434334; 
+        font-family: "power clear", sans-serif;
+        font-size: 4.5vw;
+        text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1); 
+        padding: 1px;
+      }
+
       #healthbarFoe {
         position: absolute;
         height: 2.5%;
@@ -101,9 +125,9 @@
           255,
           255,
           255,
-          0.3 /* translucent battleDiv */
+          0 /* translucent battleDiv */
         ); /* translucent white background */
-        border-top: 3px solid rgba(0, 0, 0, 0.8);
+        border-top: 3px solid rgba(0, 0, 0, 0);
         border-radius: 10px;
       }
 
@@ -113,6 +137,20 @@
         left: 0;
         right: 0;
         bottom: 0;
+        background-color: rgb(255, 255, 255, 0.6);
+        padding: 12px;
+        color: rgb(67, 67, 52); 
+        font-family: "power clear", sans-serif;
+        font-size: 4vw;
+        text-shadow: 2px 2px 2px rgba(67, 67, 52, 0.3); 
+        display: flex; 
+        justify-content: center; 
+        align-items: center;
+        text-align: center;
+        z-index: 2;
+        display: none;
+        cursor: pointer;
+        /* z-index value to place it above src image of attackSelectionDiv */
       }
 
       #attackSelectionDiv {
@@ -123,6 +161,8 @@
         bottom: 0;
         text-align: right;
         padding-right: 0px;
+        z-index: 1;
+        /* lower z-index value to place it below the combatTextDiv */
       }
 
       .databox-text-foe {
@@ -174,7 +214,7 @@
         background-color: #888; /* Change the background color to grey when the button is active (clicked) */
       }
 
-      #attack2 {
+      #ember {
         left: 65.38%;
       }
 
@@ -269,30 +309,32 @@
       </div>
       <div id="healthbarFoe"></div>
       <h1 class="databox-text-foe">SQUIRTLE</h1>
+      <h2 id = "lvFoe">Lv5</h2>
 
       <div id="databoxPlayer">
         <img src="./assets/databox.png" draggable="false" />
       </div>
       <div id="healthbarPlayer"></div>
       <h1 class="databox-text-player">CHARMANDER</h1>
+      <h2 id = "lvPlayer">Lv5</h2>
 
       <canvas id="myCanvas"></canvas>
 
       <div id="battleDiv">
-        <div id="combatTextDiv">
+        <div id="combatTextDiv"> TEXT HERE</div>
           <div id="sideTextDiv">
             What will <br />
             you do?
           </div>
           <div id="attackSelectionDiv">
             <img src="./assets/choice.png" draggable="false" />
-            <button id="attack1" class="attack-button">Attack1</button>
-            <button id="attack2" class="attack-button">Attack2</button>
+            <button id="tackle" class="attack-button">Tackle</button>
+            <button id="ember" class="attack-button">Ember</button>
             <br />
-            <button id="attack3" class="attack-button">Attack3</button>
-            <button id="attack4" class="attack-button">Attack4</button>
+            <button id="attack3" class="attack-button" disabled>Attack3</button>
+            <button id="attack4" class="attack-button" disabled>Attack4</button>
           </div>
-        </div>
+        
       </div>
     </div>
     <div id="arrow-buttons">
@@ -307,9 +349,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="json/collisions.js"></script>
+    <script src="json/collisions.js"></script>\
+    <script src="js/attacks.js"></script>
     <script src="json/battleZones.js"></script>
     <script src="js/classes.js"></script>
     <script src="index.js"></script>
+    <script src="js/battleStage.js"></script>
   </body>
 </html>
