combat text fixed

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <canvas id="myCanvas"></canvas>
 
       <div id="battleDiv">
-        <div id="combatTextDiv"> TEXT HERE</div>
+        <div id="combatTextDiv">WILD ENEMY APPEARED!</div>
           <div id="sideTextDiv">
             What will <br />
             you do?
