Combat text, battle UI visibility and faint animation changes

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       <canvas id="myCanvas"></canvas>
 
       <div id="battleDiv">
-        <div id="combatTextDiv" class="battleUI">WILD ENEMY APPEARED!</div>
+        <div id="combatTextDiv" class="battleUI"></div>
         <div id="sideTextDiv" class="battleUI">
           What will <br />
           you do?
