--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       }
 
       .attack-button:hover {
-        background-color: #d3d3d3; /* Change the background color to grey when the button is hover */
+        background-color: #d3d3d3; /* Change the background color to grey when the button is hovered */
       }
 
       .attack-button:active {
@@ -306,7 +306,6 @@
     <div id="canvasContainer" style="display: inline-block; position: relative">
       <div
         id="overlappingDiv"
-        \
         style="
           background-color: black;
           position: absolute;
